<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="about">Yoosee is a charge-free APP custom-made for the new generation of smart home appliance. It adopts the advanced Cloudlink P2P network transmission technology. Remote monitoring can be realized so simply, letting you care about your families and friends at any time everywhere.</string>
    <string name="about_s">About</string>
    <string name="accept">Answer</string>
    <string name="account">Account No.  </string>
    <string name="account_already_exists_in_mask_list">Account No. already exists in the shielding list</string>
    <string name="account_info">Account information</string>
    <string name="account_no_exist">Account not exists</string>
    <string name="add_contact">Added to device list</string>
    <string name="add_contacts">Add device</string>
    <string name="add_success">Added successfully</string>
    <string name="alarm_control">Alarm setting</string>
    <string name="alarm_email">Alarm mailbox</string>
    <string name="alarm_id_must_first_with_zero">Alarm sending account is your APP account</string>
    <string name="alarm_id_too_long"> ID number shall not contain more than 9 characters</string>
    <string name="alarm_info">Alarm information</string>
    <string name="alarm_manager">Alarm management</string>
    <string name="alarm_mask">Alarm shielding device</string>
    <string name="alarm_mask_id_too_long">Device ID shall not contain more than 9 characters</string>
    <string name="alarm_record">Alarm logging</string>
    <string name="alarm_time_interval">Alarm interval (Sec.)</string>
    <string name="all_tel">Device list</string>
    <string name="allarm_ring">Alarm ringing</string>
    <string name="allarm_robot">Device:</string>
    <string name="allarm_type">Type:</string>
    <string name="allarm_type1">External alarm</string>
    <string name="allarm_type3">Urgent alarm</string>
    <string name="Allarm_vibrate">Warning vibration</string>
    <string name="already_init_passwd">Password already exists</string>
    <string name="app_name">Yoosee</string>
    <string name="are_you_sure_delete">Are you sure to delete?</string>
    <string name="area">Defence area</string>
    <string name="audio_video_control">Media setting</string>
    <string name="auto_start">Automatic startup</string>
    <string name="balcony">Balcony</string>
    <string name="basic_Info">Basic information</string>
    <string name="bedroom">Bedroom</string>
    <string name="bell_ring">Ring tone</string>
    <string name="bell_set">Ringing setting</string>
    <string name="binding">Alarm sending account number</string>
    <string name="busy">Engaged line</string>
    <string name="buzzer">Buzzer</string>
    <string name="buzzer_time">Buzzing time (min)</string>
    <string name="calling_to">Calling</string>
    <string name="can_update_in_sd">Upgrade from SD card available</string>
    <string name="can_update_to">Renewable to</string>
    <string name="cancel"> Cancel</string>
    <string name="cancel_shield"> Cancel shielding</string>
    <string name="capture">Screenshot</string>
    <string name="capture_failed">Screenshot failure</string>
    <string name="capture_success">Successful screenshot</string>
    <string name="change">Change</string>
    <string name="change_email">Change mailbox</string>
    <string name="change_phone">Bind the mobile phone number</string>
    <string name="change_wifi">Change Wi-Fi</string>
    <string name="channel">Channel</string>
    <string name="chat">Call</string>
    <string name="check">Check</string>
    <string name="check_device_update">Check device update</string>
    <string name="check_update">Check update</string>
    <string name="check_version">Check update</string>
    <string name="china">China</string>
    <string name="clear">Empty</string>
    <string name="clear_code">Clear</string>
    <string name="clear_code_prompt">Are you sure to clear?</string>
    <string name="clear_confirm">Are you sure to empty the recent call records?</string>
    <string name="clear_success">Successfully cleared</string>
    <string name="clearing">Clearing...</string>
    <string name="click_refresh">Touch screen to refresh</string>
    <string name="comming_vibrate">Incoming call vibration</string>
    <string name="confirm">Confirmed</string>
    <string name="confirm_clear">Are you sure to empty?</string>
    <string name="confirm_clear_chat">Are you sure to empty it?</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="confirm_exit">Are you sure to exit?</string>
    <string name="conn_fail">Connection failed</string>
    <string name="connecting_to">Connecting</string>
    <string name="contact_already_exist">Device already existed</string>
    <string name="contact_name">Device nickname</string>
    <string name="contact_pwd">Device password</string>
    <string name="control">Setting</string>
    <string name="courtyard">Yard</string>
    <string name="create_pwd">Please enter device password</string>
    <string name="current_version_is">Current version is</string>
    <string name="customize">User-defined</string>
    <string name="day">Day</string>
    <string name="defence">arm</string>
    <string name="defence_area_control">Add sensors</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_alarm_id">Delete alarming account</string>
    <string name="delete_alarm_records">Delete alarm logging</string>
    <string name="delete_contact">Delete device</string>
    <string name="delete_sys_messages">Delete system message</string>
    <string name="device">Added to device list</string>
    <string name="device_info">Device information</string>
    <string name="device_is_latest_version">The current device is the latest edition</string>
    <string name="device_time">Device time</string>
    <string name="device_unsupport_defence_area">The current device doesn\'t support defence area</string>
    <string name="differentpassword">Different passwords</string>
    <string name="door_lock">Door lock</string>
    <string name="down_complete_click">Download finished, click to update.</string>
    <string name="down_device_update">Downloading</string>
    <string name="down_fault">Download failure </string>
    <string name="down_fault_click">Download failed; click to move it.</string>
    <string name="down_londing_click">Downloading. Click to cancel.</string>
    <string name="download">Downloading...</string>
    <string name="edit">Edit</string>
    <string name="email_format_error">Mailbox format error</string>
    <string name="email_login">Mailbox/ID logon</string>
    <string name="email_register">Mailbox registration</string>
    <string name="email_too_long">The mailbox name shall contain 3~32 characters</string>
    <string name="email_used">Mailbox alread registered</string>
    <string name="end_time">End time:</string>
    <string name="ensure">Confirmed</string>
    <string name="ensure_cancel_shield">Sure to cancel shielding</string>
    <string name="ensure_delete">Confirm to delete</string>
    <string name="exit">Exit</string>
    <string name="forget_pwd">Forget password?</string>
    <string name="format_error">Format error</string>
    <string name="friend">Added to device list</string>
    <string name="gallery">Mobile phone album</string>
    <string name="get_phone_code_too_times">Obtain mobile phone verification code too frequently. Please try later.</string>
    <string name="hall">Lobby</string>
    <string name="has_been_learning">Added</string>
    <string name="hour">Hour</string>
    <string name="hungup">Hangup</string>
    <string name="id_disabled"> ID forbidden</string>
    <string name="id_inactived"> ID not activated</string>
    <string name="id_overdate">Out-of-date ID </string>
    <string name="ignore">Neglect</string>
    <string name="ignore_alarm_prompt_start" />
    <string name="ignore_alarm_prompt_end">Do not receive alarm information within xx Sec.</string>
    <string name="image_size_too_small">Too small picture size</string>
    <string name="input_alarm_mask_id">Please enter the alarm device account No.</string>
    <string name="input_alarmId">Please enter the alarm sending account</string>
    <string name="input_contact_id">Please enter device ID</string>
    <string name="input_contact_name">Please enter equipment nickname</string>
    <string name="input_contact_pwd">Please enter device password</string>
    <string name="input_device_id">Please enter device ID</string>
    <string name="input_device_name">Please enter device name</string>
    <string name="input_email">Please enter the mailbox</string>
    <string name="input_friend_id">Please enter device ID</string>
    <string name="input_friend_name">Please enter device name</string>
    <string name="input_login_pwd">Please enter the logon password</string>
    <string name="input_monitor_pwd">Please enter the monitoring password</string>
    <string name="input_new_device_pwd">Please enter the new administor password</string>
    <string name="input_new_pwd">Please enter the new password</string>
    <string name="input_old_device_pwd">Please enter the old administor password</string>
    <string name="input_old_pwd">Please enter the old password</string>
    <string name="input_phone">Please enter your mobile phone number</string>
    <string name="input_phone_number">Please enter your mobile phone number</string>
    <string name="input_re_new_device_pwd">Please enter the password again</string>
    <string name="login">Login</string>
    <string name="btn_register">Registration</string>
    <string name="remind_input_wifi_pwd1">Please enter the password</string>
    <string name="try_again">Try again</string>
    <string name="mode_home">At home</string>
    <string name="mode_out">Going out</string>
    <string name="mode_sleep">Sleep</string>
    <string name="comfirm_wait_connect">Please confirm the device is waiting for connection</string>
    <string name="reset">Please use a pin to thrust the Reset hole on the bottom or at the back of the device, till the device gives out cue tone</string>
    <string name="connect_fail1">1.Incorrect wifi password is entered</string>
    <string name="connect_fail2">2.The camera doesn\'t support 5G network</string>
    <string name="connect_fail4">4.The current network environment is poor</string>
    <string name="input_emailorphone">Enter mobile No./email address</string>
    <string name="rest_login">Other log-in mode</string>
    <string name="i_get_it">I got it.</string>
    <string name="access_mode">Access way</string>
    <string name="wifi_connect">Connect via WiFi</string>
    <string name="wire_connect">Use wired connection</string>
    <string name="wifi_fail_reason1">1. Device temporarily access to 4G WiFi, instead of 5G WiFi</string>
    <string name="wifi_fail_reason2">2. Device temporarily not support WPA/WPA2 enterprise-level WiFi</string>
    <string name="wifi_fail_reason3">3. Router WiFi SSID cannot be concealed</string>
    <string name="wifi_fail_reason4">4. Router cannot enable access restriction options like AP segregation, anti-rub network</string>
    <string name="try_wire">To use wired connection</string>
    <string name="device_not_in_list_reason1">1. Please confirm that the device is open and power is on</string>
    <string name="device_not_in_list_reason2">2. Please confirm that the device is connected with network cable</string>
    <string name="device_not_in_list_reason3">3. Please confirm that the device and the handset share the same router</string>
    <string name="connect_fail3">3. Current environment is more noisy and affecting sonic wave</string>
    <string name="not_listen_connect_voice">No connection cue tone?</string>
</resources>