<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="@dimen/dialog_big_prompt_width"
        android:layout_height="480dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/tx_connect_fail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_fail1"
        android:textColor="@color/text_color_black"
        android:textSize="13dp"
        android:layout_marginTop="49dp"
        />
        <TextView
            android:id="@+id/tx_connect_fail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_connect_fail1"
            android:text="@string/connect_fail2"
            android:textColor="@color/text_color_black"
            android:textSize="13dp"
            android:layout_marginTop="@dimen/dialog_text_space"
            />
        <TextView
            android:id="@+id/tx_connect_fail3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_connect_fail2"
            android:text="@string/connect_fail3"
            android:textColor="@color/text_color_black"
            android:textSize="13dp"
            android:layout_marginTop="@dimen/dialog_text_space"
            />
        <TextView
            android:id="@+id/tx_connect_fail4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_connect_fail3"
            android:text="@string/connect_fail4"
            android:textColor="@color/text_color_black"
            android:textSize="13dp"
            android:layout_marginTop="@dimen/dialog_text_space"
            />
    <TextView
        android:id="@+id/tx_try_wire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_wire"
        android:textColor="@color/radar_blue"
        android:textSize="13dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="49dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tx_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tx_try_wire"
        android:text="@string/try_again"
        android:textColor="@color/radar_blue"
        android:textSize="13dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
    </RelativeLayout>
</LinearLayout>