<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    >
    <RelativeLayout
        android:layout_width="@dimen/dialog_big_prompt_width"
        android:layout_height="480dp">
    <LinearLayout
        android:id="@+id/l_reasons"
        android:layout_width="@dimen/dialog_big_prompt_width"
        android:layout_height="wrap_content"
        android:background="@drawable/free_dialog_bg"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_fail_reason1"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            android:layout_marginTop="48dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_fail_reason2"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            android:layout_marginTop="@dimen/dialog_text_space"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_fail_reason3"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            android:layout_marginTop="@dimen/dialog_text_space"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_space"
            android:text="@string/wifi_fail_reason4"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tx_know"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:text="@string/i_get_it"
        android:textColor="@color/radar_blue"
        android:textSize="@dimen/text_size_set"
        android:gravity="center"/>
    </RelativeLayout>
</RelativeLayout>