<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/dialog_big_prompt_width"
    android:layout_height="480dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@drawable/free_dialog_bg"
    >
    <RelativeLayout
        android:id="@+id/l_not_in_list"
        android:layout_width="335dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:id="@+id/tx_not_in_list1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_not_in_list_reason1"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            android:layout_marginTop="49dp"
            />
        <TextView
            android:id="@+id/tx_not_in_list2"
            android:layout_below="@+id/tx_not_in_list1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_space"
            android:text="@string/device_not_in_list_reason2"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            />
        <TextView
            android:id="@+id/tx_not_in_list3"
            android:layout_below="@+id/tx_not_in_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_space"
            android:text="@string/device_not_in_list_reason3"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/dialog_content_text_size"
            />
        <TextView
            android:id="@+id/tx_know"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/i_get_it"
            android:textColor="@color/radar_blue"
            android:textSize="@dimen/text_size_set"
            android:gravity="center"
            android:layout_marginBottom="62dp"/>
    </RelativeLayout>
</RelativeLayout>