<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fish_back"
    android:orientation="vertical" >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_grild_prepoint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:fadingEdge="none"
        android:scrollbars="none" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/btn_popback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btn_popdelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/delete"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_popmodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/edit" />
    </RelativeLayout>

</LinearLayout>