<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_mode_coners"
    android:paddingBottom="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_list_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/select_dialog_title_h"
        android:textColor="@color/text_color_black"
        android:gravity="center"
        android:text="模式" />

    <View style="@style/view_line" />

    <LinearLayout
        android:id="@+id/ll_mode_home"
        style="@style/Linerlayout_center"
        android:orientation="horizontal">

        <TextView
            style="@style/Linerlayout_center_text"
            android:text="@string/mode_home" />

        <ImageView
            android:id="@+id/iv_mode_home"
            style="@style/Linerlayout_center_imageview"
            android:src="@drawable/check1_video_mode" />
    </LinearLayout>
    <View style="@style/view_line" />
    <LinearLayout
        android:id="@+id/ll_mode_out"
        style="@style/Linerlayout_center">

        <TextView
            style="@style/Linerlayout_center_text"
            android:text="@string/mode_out" />

        <ImageView
            android:id="@+id/iv_mode_out"
            style="@style/Linerlayout_center_imageview"
            android:src="@drawable/check1_video_mode" />
    </LinearLayout>
    <View style="@style/view_line" />
    <LinearLayout
        android:id="@+id/ll_mode_sleep"
        style="@style/Linerlayout_center">

        <TextView
            style="@style/Linerlayout_center_text"
            android:text="@string/mode_sleep" />

        <ImageView
            android:id="@+id/iv_mode_sleep"
            style="@style/Linerlayout_center_imageview"
            android:src="@drawable/check1_video_mode" />
    </LinearLayout>
</LinearLayout>