<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bacground">

    <RelativeLayout
        android:id="@+id/layout_title"
        style="@style/bg_title_black">
        <ImageView
            android:id="@+id/back_btn"
            style="@style/button_back_title_white"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/access_mode"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/title_text_size"
            />
    </RelativeLayout>
    <com.jwkj.widget.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wifi_connect"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"/>
        <Button
            android:id="@+id/bt_wifi"
            style="@style/button_blue_style"
            android:text="@string/wifi_connect"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wire_connect"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/bt_wire"
            style="@style/button_blue_style"
            android:text="@string/wire_connect"/>
    </LinearLayout>
    </com.jwkj.widget.BounceScrollView>

</LinearLayout>