<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/corner_bg_white">
    <RelativeLayout
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_listen_connect_voice"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/no_cue_tone_title_text_size"
            android:layout_centerInParent="true"/>
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#d9d9d9"
            android:layout_alignParentBottom="true"/>
        <ImageView 
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_img_close"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_reset" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:background="@drawable/sound_wave_connect"
        android:layout_centerHorizontal="true"/>
    <TextView 
        android:id="@+id/tv_confirm_wait_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_reset"
        android:text="@string/comfirm_wait_connect"
        android:textColor="@color/text_color_black"
        android:textSize="15dp"
        android:textStyle="bold"
        />
  <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_below="@+id/tv_confirm_wait_connect"
        android:text="@string/reset"
        android:textColor="@color/text_color_black"
        android:textSize="14dp"
        />
</RelativeLayout>
